<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/main_blog_post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/blog_user_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toTopOf="@+id/blog_image"
                app:layout_constraintEnd_toStartOf="@+id/blog_user_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/profile_placeholder" />


            <TextView
                android:id="@+id/blog_user_name"
                android:layout_width="74dp"
                android:layout_height="16dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/doyo_user"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/blog_user_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/blog_date"
                android:layout_width="64dp"
                android:layout_height="0dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="28dp"
                android:text="@string/doyo_post"
                app:layout_constraintBottom_toTopOf="@+id/blog_image"
                app:layout_constraintStart_toEndOf="@+id/blog_user_image"
                app:layout_constraintTop_toBottomOf="@+id/blog_user_name"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/blog_image"
                android:layout_width="0dp"
                android:layout_height="400dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/todoblogpost"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/blog_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blog_user_image"
                app:srcCompat="@drawable/image_placeholder" />

            <TextView
                android:id="@+id/blog_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="2dp"
                android:text="@string/this_is_my_first_post_on_doyo_the_world_s_largest_rumour_redressal_platform"
                app:layout_constraintBottom_toTopOf="@+id/blog_like_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blog_image" />

            <ImageView
                android:id="@+id/blog_like_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="47dp"
                android:layout_marginRight="47dp"
                android:layout_marginBottom="1dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toTopOf="@+id/blog_like_count"
                app:layout_constraintEnd_toStartOf="@+id/unfavoured_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blog_desc"
                app:srcCompat="@drawable/favoured_icon_gray" />

            <TextView
                android:id="@+id/blog_like_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginEnd="19dp"
                android:layout_marginRight="19dp"
                android:text="@string/_0_views"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/unfavoured_count"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blog_like_btn" />

            <ImageView
                android:id="@+id/blog_comment_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="36dp"
                android:layout_marginRight="36dp"
                android:layout_marginBottom="1dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toTopOf="@+id/comment_count"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/Confused_btn"
                app:layout_constraintTop_toBottomOf="@+id/blog_desc"
                app:srcCompat="@drawable/action_comment_btn" />

            <TextView
                android:id="@+id/comment_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="29dp"
                android:layout_marginRight="29dp"
                android:text="@string/see_reviews"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/confused_count"
                app:layout_constraintTop_toBottomOf="@+id/blog_comment_icon" />

            <Button
                android:id="@+id/blog_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:background="#ffffff"
                android:enabled="false"
                android:text="@string/delete_post"
                android:textAllCaps="false"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/blog_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/unfavoured_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="41dp"
                android:layout_marginRight="41dp"
                android:contentDescription="@string/todo65"
                app:layout_constraintBottom_toTopOf="@+id/unfavoured_count"
                app:layout_constraintEnd_toStartOf="@+id/Confused_btn"
                app:layout_constraintStart_toEndOf="@+id/blog_like_btn"
                app:layout_constraintTop_toBottomOf="@+id/blog_desc"
                app:srcCompat="@drawable/unfavoured_icon_gray" />

            <TextView
                android:id="@+id/unfavoured_count"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="17dp"
                android:layout_marginRight="17dp"
                android:text="@string/_0_unfavoured"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/confused_count"
                app:layout_constraintStart_toEndOf="@+id/blog_like_count"
                app:layout_constraintTop_toBottomOf="@+id/unfavoured_btn" />

            <ImageView
                android:id="@+id/Confused_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:contentDescription="@string/todoui"
                app:layout_constraintBottom_toTopOf="@+id/confused_count"
                app:layout_constraintEnd_toStartOf="@+id/blog_comment_icon"
                app:layout_constraintStart_toEndOf="@+id/unfavoured_btn"
                app:layout_constraintTop_toBottomOf="@+id/blog_desc"
                app:srcCompat="@drawable/confused_icon_gray" />

            <TextView
                android:id="@+id/confused_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/_0_confused1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/comment_count"
                app:layout_constraintStart_toEndOf="@+id/unfavoured_count"
                app:layout_constraintTop_toBottomOf="@+id/Confused_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>